# Multi-Chat-BE

./: README.md  pyproject.toml  requirements.txt  test.db
data/chroma/: chroma.sqlite3
multi_chat_be/: main.py
multi_chat_be/Ai_Models/: __init__.py  langchain_model.py
multi_chat_be/database/: __init__.py
multi_chat_be/models/: __init__.py  chatbot.py  user.py
multi_chat_be/routes/: __init__.py  chatbot_routes.py  test_routes.py  user_routes.py
multi_chat_be/schemas/: chatbot_schema.py  document_schema.py
multi_chat_be/services/: __init__.py  chatbot_service.py  docs.txt  embedding_service.py  user_service.py
multi_chat_be/utils/: __init__.py  auth.py  file_utils.py  langchain_utils.py
